--- a/html/_modules/manta/payproc.html
+++ b/html/_modules/manta/payproc.html
@@ -190,11 +190,11 @@
 <span class="n">logger</span> <span class="o">=</span> <span class="n">logging</span><span class="o">.</span><span class="n">getLogger</span><span class="p">(</span><span class="vm">__name__</span><span class="p">)</span>
 
 
-<div class="viewcode-block" id="Conf"><a class="viewcode-back" href="../../api/manta.payproc.Conf.html#manta.payproc.Conf">[docs]</a><span class="k">class</span> <span class="nc">Conf</span><span class="p">(</span><span class="n">NamedTuple</span><span class="p">):</span>
+<span class="k">class</span> <span class="nc">Conf</span><span class="p">(</span><span class="n">NamedTuple</span><span class="p">):</span>
     <span class="n">url</span><span class="p">:</span> <span class="nb">str</span>
     <span class="n">nano_address</span><span class="p">:</span> <span class="nb">str</span>
     <span class="n">key_file</span><span class="p">:</span> <span class="nb">str</span>
-    <span class="n">nano_euro</span><span class="p">:</span> <span class="nb">float</span></div>
+    <span class="n">nano_euro</span><span class="p">:</span> <span class="nb">float</span>
 
 
 <span class="k">class</span> <span class="nc">SessionDoesNotExist</span><span class="p">(</span><span class="ne">Exception</span><span class="p">):</span>
@@ -679,8 +679,6 @@
   </div>
   Built with <a href="http://sphinx-doc.org/">Sphinx</a> using a <a href="https://github.com/rtfd/sphinx_rtd_theme">theme</a> provided by <a href="https://readthedocs.org">Read the Docs</a>. 
 
-
-
 </footer>
 
         </div>
@@ -711,9 +709,7 @@
       jQuery(function () {
           SphinxRtdTheme.Navigation.enable(true);
       });
-  </script>
-
-  <script src="../../_static/js/scrollspy.js"></script> 
+  </script> 
 
 </body>
 </html>
