--- a/html/genindex.html
+++ b/html/genindex.html
@@ -147,8 +147,7 @@
 <h1 id="index">Index</h1>
 
 <div class="genindex-jumpbox">
- <a href="#_"><strong>_</strong></a>
- | <a href="#A"><strong>A</strong></a>
+ <a href="#A"><strong>A</strong></a>
  | <a href="#C"><strong>C</strong></a>
  | <a href="#D"><strong>D</strong></a>
  | <a href="#F"><strong>F</strong></a>
@@ -163,14 +162,6 @@
  | <a href="#W"><strong>W</strong></a>
  
 </div>
-<h2 id="_">_</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/manta.payproc.Conf.html#manta.payproc.Conf.__init__">__init__() (manta.payproc.Conf method)</a>
-</li>
-  </ul></td>
-</tr></table>
-
 <h2 id="A">A</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -184,14 +175,12 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="protocol/messages.html#manta.messages.Status.CANCELED">CANCELED (manta.messages.Status attribute)</a>
 </li>
-      <li><a href="api/manta.payproc.Conf.html#manta.payproc.Conf">Conf (class in manta.payproc)</a>
-</li>
       <li><a href="api/manta.payproc.PayProc.html#manta.payproc.PayProc.confirm">confirm() (manta.payproc.PayProc method)</a>
+</li>
+      <li><a href="protocol/messages.html#manta.messages.Status.CONFIRMING">CONFIRMING (manta.messages.Status attribute)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="protocol/messages.html#manta.messages.Status.CONFIRMING">CONFIRMING (manta.messages.Status attribute)</a>
-</li>
       <li><a href="api/manta.payproc.PayProc.html#manta.payproc.PayProc.confirming">confirming() (manta.payproc.PayProc method)</a>
 </li>
       <li><a href="api/manta.payproc.TXStorage.html#manta.payproc.TXStorage.create">create() (manta.payproc.TXStorage method)</a>
@@ -363,8 +352,6 @@
   </div>
   Built with <a href="http://sphinx-doc.org/">Sphinx</a> using a <a href="https://github.com/rtfd/sphinx_rtd_theme">theme</a> provided by <a href="https://readthedocs.org">Read the Docs</a>. 
 
-
-
 </footer>
 
         </div>
@@ -395,9 +382,7 @@
       jQuery(function () {
           SphinxRtdTheme.Navigation.enable(true);
       });
-  </script>
-
-  <script src="_static/js/scrollspy.js"></script> 
+  </script> 
 
 </body>
 </html>
