--- a/html/genindex.html
+++ b/html/genindex.html
@@ -193,8 +193,6 @@
       </ul></li>
       <li><a href="api/manta.payproc.PayProc.html#manta.payproc.PayProc.confirm">confirm() (manta.payproc.PayProc method)</a>
 </li>
-      <li><a href="protocol/messages.html#manta.messages.Status.CONFIRMING">CONFIRMING (manta.messages.Status attribute)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/manta.payproc.PayProc.html#manta.payproc.PayProc.confirming">confirming() (manta.payproc.PayProc method)</a>
@@ -335,8 +333,6 @@
 </li>
       <li><a href="protocol/messages.html#manta.messages.Status.PENDING">PENDING (manta.messages.Status attribute)</a>
 </li>
-      <li><a href="protocol.html#term-pos"><strong>POS</strong></a>
-</li>
   </ul></td>
 </tr></table>
 
@@ -376,12 +372,8 @@
 </li>
       <li><a href="protocol/messages.html#manta.messages.Status">Status (class in manta.messages)</a>
 </li>
-      <li><a href="protocol.html#term-store"><strong>Store</strong></a>
-
-      <ul>
-        <li><a href="api/manta.store.html#manta.store.Store">(class in manta.store)</a>
+      <li><a href="api/manta.store.html#manta.store.Store">Store (class in manta.store)</a>
 </li>
-      </ul></li>
       <li><a href="api/manta.store.html#manta.store.Store.subscribe">subscribe() (manta.store.Store method)</a>
 </li>
   </ul></td>
